Добавляет скрытие длинного текста на мобильном, правит стили контента

--- a/source/project-page.html
+++ b/source/project-page.html
@@ -92,7 +92,16 @@
               </div>
 
               <div class="project-page__text">
-                <p>Здесь будет описание проекта (информация из стандартного поля). Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.</p>
+                <div class="project-page__text-container">
+                  <p>Здесь будет описание проекта (информация из стандартного поля). Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.</p>
+                </div>
+
+                <button class="project-page__text-btn  link" type="button">
+                  <span class="project-page__text-btn-caption">Показать полностью</span>
+                  <svg width="13" height="13">
+                    <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+                  </svg>
+                </button>
               </div>
 
               <h2>Документы</h2>
@@ -340,10 +349,19 @@
               </div>
 
               <div class="project-page__text">
-                <p>Короткий текст – длина от 0 до 256 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или.</p>
+                <div class="project-page__text-container">
+                  <p>Короткий текст – длина от 0 до 256 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или.</p>
+                </div>
+
+                <button class="project-page__text-btn  link" type="button">
+                  <span class="project-page__text-btn-caption">Показать полностью</span>
+                  <svg width="13" height="13">
+                    <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+                  </svg>
+                </button>
               </div>
 
-              <h2 class="big">Большой заголовок – текст из списка Дополнительных полей.</h2>
+              <h2>Большой заголовок – текст из списка Дополнительных полей.</h2>
 
               <div class="highlighted-text">
                 <p>Выделенный текст - длина от 100 до 2000 символов (в данном блоке текста — 1000 символов). Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
@@ -372,11 +390,20 @@
               </p>
 
               <div class="project-page__text">
-                <p>Описание - 2000 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.</p>
-                <p>Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
-                <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать рыбный текст для сравнения особенностей шрифтов, то имеет смысл выбрать текст содержащий, по возможности все буквы и типичные для языка специальные знаки.</p>
-                <p>В настоящее время существует множество читаемых рыбных текстов. В большинстве случаев они используются только в целях заполнения места. Часто эти альтернативы классического Lorem ipsum занимательны и рассказывают небольшие, веселые или бессмысленные истории.</p>
-                <p>Согласно большинству источников Lorem ipsum представляет собой отрывок одного из трактатов Цицерона и его корни уходят в 45 век до н. э.</p>
+                <div class="project-page__text-container">
+                  <p>Описание - 2000 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.</p>
+                  <p>Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
+                  <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать рыбный текст для сравнения особенностей шрифтов, то имеет смысл выбрать текст содержащий, по возможности все буквы и типичные для языка специальные знаки.</p>
+                  <p>В настоящее время существует множество читаемых рыбных текстов. В большинстве случаев они используются только в целях заполнения места. Часто эти альтернативы классического Lorem ipsum занимательны и рассказывают небольшие, веселые или бессмысленные истории.</p>
+                  <p>Согласно большинству источников Lorem ipsum представляет собой отрывок одного из трактатов Цицерона и его корни уходят в 45 век до н. э.</p>
+                </div>
+
+                <button class="project-page__text-btn  link" type="button">
+                  <span class="project-page__text-btn-caption">Показать полностью</span>
+                  <svg width="13" height="13">
+                    <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
