Добавляет страницу обсуждений

--- a/source/index.html
+++ b/source/index.html
@@ -41,6 +41,9 @@
           <li>
             <a href="news.html" target="_blank">Новости и уведомления</a>
           </li>
+          <li>
+            <a href="discussions.html" target="_blank">Обсуждения</a>
+          </li>
         </ul>
       </div>
     </main>
