--- a/source/news.html
+++ b/source/news.html
@@ -25,19 +25,19 @@
           <ul class="news-notice__list">
             <li class="news-notice__item">
               <p class="news-notice__date news-notice__date--notice">22.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Заседание межведомственной комиссии по реализации отдельных указов Президента РФ и мониторингу достижения указанных в них целевых показателей.
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date news-notice__date--notice">21.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Тульская область признана лучшей по взаимодействию с жителями в социальных сетях
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">20.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Владимир Груздев: Деньги Народного бюджета будут выделяться на самые неотложные нужды
               </a>
             </li>
@@ -49,31 +49,31 @@
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">18.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Подведены итоги опроса "Как вы относитесь к курению на балконе?"
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">17.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Владимир Груздев: Деньги Народного бюджета будут выделяться на самые неотложные нужды
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">16.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Свыше 105 тысяч первоклассников пойдут в школы в сентябре
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">15.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Проект «Счастливая семья»: как получить помощь в воспитании детей
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">14.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Работу систем аудиоинформирования восстановили еще на 2 автобусных маршрутах
               </a>
             </li>
@@ -85,13 +85,13 @@
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date news-notice__date--notice">12.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Более 280 гектаров земли передали для развития индустриального технопарка
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">11.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Сведения в отношении компании «Сенсимилья» внесут в реестр недобросовестных поставщиков
               </a>
             </li>
@@ -103,13 +103,13 @@
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date">09.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 О поддержке производителей и осознанном потреблении
               </a>
             </li>
             <li class="news-notice__item">
               <p class="news-notice__date news-notice__date--notice">08.08.2019</p>
-              <a class="news-notice__text news-notice__text--link">
+              <a href="#" class="news-notice__text news-notice__text--link">
                 Результаты муниципального форуму для предпринимателей
               </a>
             </li>
