start poll page

--- a/source/index.html
+++ b/source/index.html
@@ -41,6 +41,10 @@
           <li>
             <a href="news.html" target="_blank">Новости и уведомления</a>
           </li>
+          <br>
+          <li>
+            <a href="poll-page.html" target="_blank">Страница одного опроса</a>
+          </li>
         </ul>
       </div>
     </main>
