--- a/source/discussions.html
+++ b/source/discussions.html
@@ -5,7 +5,15 @@
   <body class="page-body">
     <include src="source/components/header.html"></include>
 
-    <main>
+    <main class="page-content">
+      <div class="container">
+        <a class="page-content__back-btn" href="main-page.html">
+          <svg width="8" height="14">
+            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+          </svg>
+          Назад
+        </a>
+      </div>
       <div class="container page-top">
         <h1 class="page-title page-title--news">Обсуждения</h1>
         <div class="page-top__form-wrapper">
