--- a/source/projects-against.html
+++ b/source/projects-against.html
@@ -5,9 +5,9 @@
   <body>
     <include src="source/components/header.html"></include>
 
-    <main class="projects page-content page-content--with-back-btn">
+    <main class="projects page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="#">
+        <a class="page-content__back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
