--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -49,23 +49,23 @@
       <h2>Форма</h2>
       <form action="#" class="form">
         <div class="form-checkbox">
-          <input class="visually-hidden" type="checkbox" name="checkbox" id="checkbox" value="checkbox">
+          <input type="checkbox" name="checkbox" id="checkbox" value="checkbox">
           <label for="checkbox">Я чекбокс</label>
         </div>
         <div class="form-checkbox">
-          <input class="visually-hidden" type="checkbox" name="checkbox-2" id="checkbox-2" value="checkbox-2" disabled>
+          <input type="checkbox" name="checkbox-2" id="checkbox-2" value="checkbox-2" disabled>
           <label for="checkbox-2">Я чекбокс</label>
         </div>
         <div class="form-radio">
-          <input class="visually-hidden" type="radio" name="radio" id="radio-1" value="radio-1" checked>
+          <input type="radio" name="radio" id="radio-1" value="radio-1" checked>
           <label for="radio-1">Я радиобаттон</label>
         </div>
         <div class="form-radio">
-          <input class="visually-hidden" type="radio" name="radio" id="radio-2" value="radio-2">
+          <input type="radio" name="radio" id="radio-2" value="radio-2">
           <label for="radio-2">Я радиобаттон</label>
         </div>
         <div class="form-radio">
-          <input class="visually-hidden" type="radio" name="radio" id="radio-3" value="radio-3" disabled>
+          <input type="radio" name="radio" id="radio-3" value="radio-3" disabled>
           <label for="radio-3">Я радиобаттон</label>
         </div>
         <div class="form-select">
