--- a/source/projects.html
+++ b/source/projects.html
@@ -106,12 +106,12 @@
               <div class="projects__filter-main filter__main">
                 <div class="filter__main-container">
                   <div class="filter__item form-radio">
-                    <input class="visually-hidden" type="radio" name="filter-location" id="filter-location-regional" value="filter-location-regional" checked>
+                    <input type="radio" name="filter-location" id="filter-location-regional" value="filter-location-regional" checked>
                     <label for="filter-location-regional">Региональные</label>
                   </div>
 
                   <div class="filter__item form-radio">
-                    <input class="visually-hidden" type="radio" name="filter-location" id="filter-location-local" value="filter-location-local">
+                    <input type="radio" name="filter-location" id="filter-location-local" value="filter-location-local">
                     <label for="filter-location-local">Местные</label>
                   </div>
 
@@ -139,7 +139,7 @@
                   </div>
 
                   <div class="filter__item filter__item--separated form-checkbox">
-                    <input class="visually-hidden" type="checkbox" name="favorite-only" id="favorite-only" value="checkbox">
+                    <input type="checkbox" name="favorite-only" id="favorite-only" value="checkbox">
                     <label for="favorite-only">Только избранные</label>
                   </div>
                 </div>
