--- a/source/main-page.html
+++ b/source/main-page.html
@@ -5,8 +5,16 @@
   <body class="page-body">
     <include src="source/components/header.html"></include>
 
-    <main class="main-page">
+    <main class="main-page page-content">
       <h1 class="visually-hidden">Главная страница</h1>
+      <div class="container">
+        <a class="page-content__back-btn" href="main-page.html">
+          <svg width="8" height="14">
+            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+          </svg>
+          Назад
+        </a>
+      </div>
       <div class="news-notice">
         <div class="news-notice__wrap">
           <div class="news-notice__news section">
