--- a/source/composite-poll-process.html
+++ b/source/composite-poll-process.html
@@ -29,6 +29,7 @@
     </main>
 
     <include src="source/components/footer.html"></include>
+    <include src="source/components/up-btn.html"></include>
 
     <script src="js/libs.js"></script>
     <script src="js/main.min.js"></script>
