Добавляет скрипт смены состояния кнопки "подписаться"

--- a/source/main-page.html
+++ b/source/main-page.html
@@ -94,8 +94,8 @@
           <div class="social__text">
             <p class="social__text-inner">Вы можете подписаться на самые важные<br>и актуальные обновления проектов и событий</p>
           </div>
-          <a class="social__link social__link--tick link-arrow" href="#">
-            <span>Подписаться</span>
+          <a class="social__link social__link--subscribe link-arrow" href="#">
+            Подписаться
           </a>
         </div>
         <div class="social__item social__item--icq">
