--- a/source/index.html
+++ b/source/index.html
@@ -48,6 +48,9 @@
           <li>
             <a href="poll-page.html" target="_blank">Страница одного опроса</a>
           </li>
+          <li>
+            <a href="poll-page-finished.html" target="_blank">Страница одного опроса - работа с полученными комментариями</a>
+          </li>
         </ul>
       </div>
     </main>
