--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -87,13 +87,15 @@
               <div class="form__range-wrapper form-range">
                 <div class="form-range__value">
                   <span>1</span>
-                  <span>5</span>
+                  <!-- <span>5</span> -->
                   <span>10</span>
                 </div>
-                <div class="form-range__track">
+                <!-- <div class="form-range__track">
                   <div class="form-range__fill"></div>
                   <button type="button" class="form-range__button"></button>
-                </div>
+                </div> -->
+                <!-- <input type="range" name="poll-range" id="poll-range" min="1" max="10" step="1"> -->
+                <div id="poll-range"></div>
                 <div class="form-range__description">
                   <span>очень плохо</span>
                   <span>очень хорошо</span>
