Добавляет страницу опросов

--- a/source/index.html
+++ b/source/index.html
@@ -44,6 +44,9 @@
           <li>
             <a href="discussions.html" target="_blank">Обсуждения</a>
           </li>
+          <li>
+            <a href="poll-list.html" target="_blank">Опросы</a>
+          </li>
           <br>
           <li>
             <a href="poll-page.html" target="_blank">Страница одного опроса</a>
