Добавляет страницу обсуждений

--- a/source/discussions.html
+++ b/source/discussions.html
@@ -15,7 +15,7 @@
         </a>
       </div>
       <div class="container page-top">
-        <h1 class="page-title page-title--news">Обсуждения</h1>
+        <h1 class="page-title page-title--large">Обсуждения</h1>
         <div class="page-top__form-wrapper">
           <form action="#" class="form">
             <div class="form-checkbox page-top__checkbox">
