--- a/source/index.html
+++ b/source/index.html
@@ -50,6 +50,9 @@
           <li>
             <a href="news-item.html" target="_blank">Страница одной новости</a>
           </li>
+          <li>
+            <a href="discussion-item.html" target="_blank">Страница одного обсуждения</a>
+          </li>
           <br>
           <li>
             <a href="poll-page.html" target="_blank">Страница одного опроса</a>
