--- a/source/poll-list.html
+++ b/source/poll-list.html
@@ -15,7 +15,7 @@
         </a>
       </div>
       <div class="container page-top">
-        <h1 class="page-title page-title--news">Опросы</h1>
+        <h1 class="page-title page-title--large">Опросы</h1>
         <ul class="page-nav">
           <li class="page-nav__item">
             <a href="#" class="page-nav__link page-nav__link--active">Все</a>
