--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -194,7 +194,7 @@
                   <span>Ваш комментарий</span>
                 </a>
               </div>
-              <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем <span class="text-hidden__container"> самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</span> </p>
+              <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
                 <button type="button" class="answers__button text-hidden__btn">
                   <span>Развернуть</span>
@@ -254,7 +254,7 @@
                   <span>Ваш комментарий</span>
                 </a>
               </div>
-              <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого вследствии этого использование этого текста в качестве визуального заполнителя макета. <span class="text-hidden__container"> Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</span></p>
+              <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого вследствии этого использование этого текста в качестве визуального заполнителя макета. Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
                 <button type="button" class="answers__button text-hidden__btn">
                   <span>Развернуть</span>
@@ -281,7 +281,7 @@
                   <span>Посмотреть фрагмент</span>
                 </a>
               </div>
-              <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве <span class="text-hidden__container"> визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</span></p>
+              <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого использование этого текста в качестве визуального заполнителя макета в испанском языке ограничено. Если вы хотите использовать Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных. Вследствии этого Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
                 <button type="button" class="answers__button text-hidden__btn">
                   <span>Развернуть</span>
@@ -327,7 +327,7 @@
                   <span>Посмотреть фрагмент</span>
                 </a>
               </div>
-              <p>Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений.<span class="text-hidden__container"> Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</span></p>
+              <p class="text-hidden__container">Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает Недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает недостатком является то обстоятельство, что в латыни некоторые буквы используются чаще или реже других, что создает другое изображение печати. Кроме того в латинском языке заглавная буква используется только в начале предложений. Тем самым Lorem ipsum не отображает написание, к примеру, имен собственных.</p>
               <div class="answers__button-wrapper">
                 <button type="button" class="answers__button text-hidden__btn">
                   <span>Развернуть</span>
@@ -351,7 +351,9 @@
               </svg>
             </a>
             <div class="answers__count">
-              <input type="text" name="count-answer" id="count-answer" value="1" aria-label="номер текущей страницы">
+              <form action="#" class="answers__form">
+                <input type="text" name="count-answer" id="count-answer" value="1" aria-label="номер текущей страницы">
+              </form>
               <span>/</span>
               <span class="answers__all-count">24</span>
             </div>
@@ -535,7 +537,7 @@
               </button>
             </div>
 
-            <section class="your-comment answers">
+            <section class="your-comment answers text-hidden">
               <div class="your-comment__img-wrapper">
                 <img src="img/comments-img.jpg" width="264" height="389" alt="описание картинки">
               </div>
@@ -558,7 +560,7 @@
                   </div>
                   <p class="your-comment__description">Отредактировать или удалить комментарий вы можете только в течение двух часов с момента публикации.</p>
                 </div>
-                <p class="your-comment__text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит</p>
+                <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
                 <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
                   <button type="button" class="answers__button text-hidden__btn">
                     <span>Развернуть</span>
@@ -621,7 +623,7 @@
                 </button>
               </div>
 
-              <section class="your-comment answers">
+              <section class="your-comment answers text-hidden">
                 <div class="your-comment__img-wrapper">
                   <img src="img/comments-img.jpg" width="264" height="389" alt="описание картинки">
                 </div>
@@ -629,7 +631,7 @@
                   <div class="your-comment__top-wrapper">
                     <h2 class="your-comment__title">Ваш комментарий:</h2>
                   </div>
-                  <p class="your-comment__text">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит</p>
+                  <p class="your-comment__text text-hidden__container text-hidden__container--comment">Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке. Lorem ipsum был создан на псевдо-латыни, которая приблизительно соответствует настоящей латыни. Этот текст содержит ряд настоящих латинских слов. Как и большинство других текстов, Lorem ipsum не имеет смысла, а лишь имитирует ритм большинства европейских языков использующих латиницу. Латинское происхождение и относительная бессмысленность текста Lorem ipsum хороши тем, что не привлекают к себе внимания и не отвлекают от дизайна.</p>
                   <div class="answers__button-wrapper answers__button-wrapper--blue-gradient">
                     <button type="button" class="answers__button text-hidden__btn">
                       <span>Развернуть</span>
