Bug fix special popup

--- a/source/composite-poll-process.html
+++ b/source/composite-poll-process.html
@@ -3,6 +3,8 @@
   <include src="source/components/head.html"></include>
 
   <body class="page-body">
+    <include src="source/components/special-popup.html"></include>
+
     <include src="source/components/header.html"></include>
 
     <main class="page-composite-poll page-content">
