Выносит список проектов в отдельный блок

--- a/source/projects-against.html
+++ b/source/projects-against.html
@@ -105,7 +105,7 @@
           </form>
         </div>
 
-        <div class="projects__list">
+        <div class="projects-list">
           <article class="project-item">
             <a class="project-item__link" href="#">
               <h2 class="project-item__title">Обязать контролеров проверять как пассажиров так и перевозчиков</h2>
