--- a/source/index.html
+++ b/source/index.html
@@ -66,6 +66,19 @@
           <li>
             <a href="poll-page-finished.html" target="_blank">Страница одного опроса - работа с полученными комментариями</a>
           </li>
+          <br>
+          <li>
+            <a href="activity-discussions.html" target="_blank">Активность -- Обсуждения</a>
+          </li>
+          <li>
+            <a href="activity-projects.html" target="_blank">Активность -- Проекты</a>
+          </li>
+          <li>
+            <a href="activity-surveys.html" target="_blank">Активность -- Опросы</a>
+          </li>
+          <li>
+            <a href="activity-partners.html" target="_blank">Активность -- На сторонних ресурсах </a>
+          </li>
         </ul>
       </div>
     </main>
