Объединяет общие блоки

--- a/source/activity-partners.html
+++ b/source/activity-partners.html
@@ -56,7 +56,7 @@
           </li>
         </ul>
 
-        <button class="activity__list-btn button button--light-blue" type="button">Показать ещё</button>
+        <button class="list-btn button button--light-blue" type="button">Показать ещё</button>
 
         <include src="source/components/paginator.html"></include>
       </div>
