--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -287,7 +287,7 @@
           </ul>
         </section>
 
-        <button class="activity__list-btn button button--light-blue" type="button">Показать ещё</button>
+        <button class="list-btn button button--light-blue" type="button">Показать ещё</button>
 
         <include src="source/components/paginator.html"></include>
       </div>
