--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -290,7 +290,7 @@
           </article>
         </div>
 
-        <button class="activity__list-btn button button--light-blue" type="button">Показать ещё</button>
+        <button class="list-btn button button--light-blue" type="button">Показать ещё</button>
 
         <include src="source/components/paginator.html"></include>
       </div>
