Добавляет табы активнсти

--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -18,6 +18,27 @@
 
         <h1 class="page-content__title">Активность</h1>
 
+      </div>
+      <div class="activity-tabs">
+
+        <ul class="activity-tabs__list">
+          <li class="activity-tabs__item">
+            <a href="activity-discussions.html" class="activity-tabs__link">Обсуждения</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="activity-projects.html" class="activity-tabs__link">Проекты</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="#" class="activity-tabs__link activity-tabs__link--active">Опросы</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="activity-partners.html" class="activity-tabs__link">На сторонних ресурсах</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="container">
+
         <section class="poll poll--poll-list">
           <ul class="poll__list">
             <li class="poll__item">
