--- a/source/activity-partners.html
+++ b/source/activity-partners.html
@@ -18,6 +18,27 @@
 
         <h1 class="page-content__title">Активность</h1>
 
+      </div>
+      <div class="activity-tabs">
+
+        <ul class="activity-tabs__list">
+          <li class="activity-tabs__item">
+            <a href="activity-discussions.html" class="activity-tabs__link">Обсуждения</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="activity-projects.html" class="activity-tabs__link">Проекты</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="activity-surveys.html" class="activity-tabs__link">Опросы</a>
+          </li>
+          <li class="activity-tabs__item">
+            <a href="#" class="activity-tabs__link activity-tabs__link--active">На сторонних ресурсах</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="container">
+
         <ul class="partners-list">
           <li class="partners-list__item">
             <a class="partners-list__partner-link" href="#">
