--- a/source/main-page.html
+++ b/source/main-page.html
@@ -480,7 +480,7 @@
         </a>
       </section>
 
-      <section class="discussion">
+      <section class="discussion section">
         <div class="discussion__head section__head">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="img/sprite.svg#icon-discussion"></use>
