--- a/source/activity-discussions.html
+++ b/source/activity-discussions.html
@@ -9,7 +9,7 @@
 
     <main class="activity page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="main-page.html">
+        <a class="back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
@@ -40,6 +40,7 @@
       <div class="container">
 
         <section class="discussion discussion--page">
+          <h2 class="visually-hidden">Обсуждения</h2>
           <ul class="discussion__list">
             <li class="discussion__item discussion__item--sign">
               <div class="discussion__item-top">
