--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -9,7 +9,7 @@
 
     <main class="activity page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="main-page.html">
+        <a class="back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
