--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -9,7 +9,7 @@
 
     <main class="activity page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="main-page.html">
+        <a class="back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
@@ -40,6 +40,7 @@
       <div class="container">
 
         <section class="poll poll--poll-list">
+          <h2 class="visually-hidden">Опросы</h2>
           <ul class="poll__list">
             <li class="poll__item">
               <p class="poll__text">
