--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -9,7 +9,7 @@
 
     <main class="page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="main-page.html">
+        <a class="back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
@@ -369,7 +369,7 @@
       </section>
       <section class="poll-page poll-page--final">
         <div class="container">
-          <h1 class="poll-page__title page-title">Финальная версия документа</h1>
+          <h2 class="poll-page__title page-title">Финальная версия документа</h2>
           <div class="poll-page__dates">
             <div class="poll-page__date-start">
               <span class="poll-page__date-title">Дата добавления:</span>
@@ -380,7 +380,7 @@
             </div>
           </div>
           <div class="poll-page__description">
-            <p class="poll-page__description-part">
+            <p>
               Описание - 2000 символов. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.
             </p>
           </div>
@@ -490,7 +490,7 @@
             </section>
             <section class="all-comments">
               <div class="all-comments__top">
-                <h2 class="all-comments__title">Комментарии пользователей</h2>
+                <h3 class="all-comments__title">Комментарии пользователей</h3>
                 <span class="all-comments__count">49</span>
               </div>
               <ul class="all-comments__list">
@@ -576,7 +576,7 @@
 
             <section class="all-comments">
               <div class="all-comments__top">
-                <h2 class="all-comments__title">Комментарии пользователей</h2>
+                <h3 class="all-comments__title">Комментарии пользователей</h3>
                 <span class="all-comments__count">49</span>
               </div>
               <ul class="all-comments__list">
@@ -647,7 +647,7 @@
 
               <section class="all-comments">
                 <div class="all-comments__top">
-                  <h2 class="all-comments__title">Комментарии пользователей</h2>
+                  <h3 class="all-comments__title">Комментарии пользователей</h3>
                   <span class="all-comments__count">49</span>
                 </div>
                 <ul class="all-comments__list">
