--- a/source/discussions.html
+++ b/source/discussions.html
@@ -9,7 +9,7 @@
 
     <main class="page-content">
       <div class="container">
-        <a class="page-content__back-btn" href="main-page.html">
+        <a class="back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
@@ -29,6 +29,7 @@
       </div>
       <section class="discussion discussion--page">
         <div class="container">
+        <h2 class="visually-hidden">Обсуждения</h2>
         <ul class="discussion__list">
           <li class="discussion__item discussion__item--sign">
             <div class="discussion__item-top">
