--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -9,12 +9,7 @@
 
     <main class="page-content">
       <div class="container">
-        <a class="back-btn" href="main-page.html">
-          <svg width="8" height="14">
-            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
-          </svg>
-          Назад
-        </a>
+        <include src="source/components/back-btn.html"></include>
       </div>
       <section class="composite-poll">
         <div class="container">
