--- a/source/news.html
+++ b/source/news.html
@@ -9,12 +9,7 @@
 
     <main class="page-content">
       <div class="container">
-        <a class="back-btn" href="main-page.html">
-          <svg width="8" height="14">
-            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
-          </svg>
-          Назад
-        </a>
+        <include src="source/components/back-btn.html"></include>
       </div>
       <div class="container page-top">
         <h1 class="page-title page-title--large">Новости и уведомления</h1>
