--- a/source/project-page.html
+++ b/source/project-page.html
@@ -9,12 +9,7 @@
 
     <main class="project-page page-content page-content--with-back-btn">
       <div class="container">
-        <a class="back-btn" href="#">
-          <svg width="8" height="14">
-            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
-          </svg>
-          Назад
-        </a>
+        <include src="source/components/back-btn.html"></include>
       </div>
 
       <div class="container container--desktop-only">
